# Big_data_image_search

./: .gitignore  README.md  README2.md  config.yaml  config_full copy.yaml  config_miniset.yaml  pyproject.toml  requirements.txt
scripts/: viz_interactive.py
src/image_recommender.egg-info/: PKG-INFO  SOURCES.txt
src/imagerec/: __init__.py  __main__.py  ann.py  cli.py  config.py  db.py  indexer.py  io.py  logging_utils.py  profile.py  query.py  similarity.py  train.py  utils.py  viz.py
src/imagerec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/imagerec/features/: color.py  embedding.py  phash.py
src/recommender/api/: cli.py
src/recommender/data/: dataset.py  db.py
src/recommender/features/: color.py
tests/: .gitignore  test_color.py  test_db.py  test_generator.py  test_similarity.py
